--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,19 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!-- Style for the title at the top of the menu and settings -->
+    <style name="DialogTitleStyle">
+        <item name="android:textColor">#FF000000</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- Style for the buttons at the top of the menu and settings -->
+    <style name="DialogButtonStyle">
+        <item name="android:background">#00000000</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">#FFB08757</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
