--- a/app/src/main/res/layout/fragment_add_city.xml
+++ b/app/src/main/res/layout/fragment_add_city.xml
@@ -12,6 +12,16 @@
         android:background="@drawable/bkg_rounded_dialog_title"
         >
 
+        <Button
+            android:id="@+id/close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical|start"
+            style="@style/DialogButtonStyle"
+            android:text="@string/button_close" />
+
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
@@ -28,9 +38,9 @@
             android:id="@+id/save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_gravity="center_vertical|right"
+            android:layout_gravity="center_vertical|end"
             style="@style/DialogButtonStyle"
             android:text="@string/button_save" />
 
