--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="60dp"
     android:orientation="horizontal">
 
@@ -14,20 +14,18 @@
 
     <TextView
         android:id="@+id/content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:layout_gravity="center_vertical" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <ImageButton
         android:id="@+id/delete"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="60dp"
-        android:layout_gravity="center_vertical"
-        android:padding="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:minWidth="14dp"
         android:scaleType="fitCenter"
-        android:src="@android:drawable/ic_delete"/>
+        android:src="@android:drawable/ic_delete" />
 
 </LinearLayout>
